feat: adds nuxt aplication with apollo and vuetify configured

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 node_modules
 .pnp
 .pnp.js
+.nitro
+.nuxt
+.output
+dist
 
 # Local env files
 .env
@@ -36,3 +40,6 @@ yarn-error.log*
 # Misc
 .DS_Store
 *.pem
+
+## Cache
+tmp
