feat: adds migration and seeds scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "db:migrate": "docker exec contract-service yarn prisma migrate deploy",
+    "db:seed": "docker exec contract-service yarn ts-node apps/contract-service/prisma/seeds/main.ts"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
