fix: change api dependecy to start

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,8 @@ services:
     ports:
       - '3001:3001'
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - contract
   
